[package]
name = "ln-vanity-pubkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.28.1"
bip39 = "1.0.1"
rand = "0.8.5"
futures = "0.3.21"
tokio = { version = "1.20.1", features = ["full"] }
tokio-rayon = "2.1.0"