[package]
name = "ln-vanity-pubkey"
version = "0.0.1-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.28.1"
bip39 = "1.0.1"
rand = "0.8.5"
clap = { version = "3.2.15", features = ["cargo"] }
num_cpus = "1.13.1"